# project_vc

./: README.md  adaptive.py  equalize.py  fourier.py  gaussiano.py  laplacian.py  media.py  mediana.py  otsu.py  pyproject.toml  show_histogram.py  sobel.py  threshold.py  transfer_histogram.py
tests/: test_conv.py
tools/: adaptive.py  conv.py  filters.py  histogram.py  noise.py  otsu.py  parse.py  thresholding.py
